fix: replaced all the extra code with the joins where needed
